--- a/Basic-JavaScript-Practice/index.html
+++ b/Basic-JavaScript-Practice/index.html
@@ -25,6 +25,6 @@
   </head>
   <body>
     <h1>JavaScript Fundamentals - Part 1</h1>
-    <script src="HelloWorld.js"></script>
+    <script src="Challenge3.js"></script>
   </body>
 </html>
